Source/WTF/wtf/cocoa/MemoryPressureHandlerCocoa.mm
@@ -78,21 +78,23 @@ void MemoryPressureHandler::install()
             switch (status) {
             // VM pressure events.
             case DISPATCH_MEMORYPRESSURE_NORMAL:
-                setUnderMemoryPressure(false);
+                setMemoryPressureStatus(MemoryPressureStatus::Normal);
                 break;
             case DISPATCH_MEMORYPRESSURE_WARN:
-                setUnderMemoryPressure(false);
+                setMemoryPressureStatus(MemoryPressureStatus::SystemWarning);
                 respondToMemoryPressure(Critical::No);
                 break;
             case DISPATCH_MEMORYPRESSURE_CRITICAL:
-                setUnderMemoryPressure(true);
+                setMemoryPressureStatus(MemoryPressureStatus::SystemCritical);
                 respondToMemoryPressure(Critical::Yes);
                 break;
             // Process memory limit events.
             case DISPATCH_MEMORYPRESSURE_PROC_LIMIT_WARN:
+                setMemoryPressureStatus(MemoryPressureStatus::ProcessLimitWarning);
                 respondToMemoryPressure(Critical::No);
                 break;
             case DISPATCH_MEMORYPRESSURE_PROC_LIMIT_CRITICAL:
+                setMemoryPressureStatus(MemoryPressureStatus::ProcessLimitCritical);
                 respondToMemoryPressure(Critical::Yes);
                 break;
             }
