Source/WebCore/page/MemoryRelease.h
@@ -31,6 +31,12 @@ namespace WebCore {
 
 enum class MaintainBackForwardCache : bool { No, Yes };
 enum class MaintainMemoryCache : bool { No, Yes };
+enum class LogMemoryStatisticsReason : uint8_t {
+    DebugNotification,
+    WarningMemoryPressureNotification,
+    CriticalMemoryPressureNotification,
+    OutOfMemoryDeath
+};
 
 WEBCORE_EXPORT void releaseMemory(Critical, Synchronous, MaintainBackForwardCache = MaintainBackForwardCache::No, MaintainMemoryCache = MaintainMemoryCache::No);
 void platformReleaseMemory(Critical);
@@ -38,6 +44,6 @@ WEBCORE_EXPORT void releaseGraphicsMemory(Critical, Synchronous);
 void platformReleaseGraphicsMemory(Critical);
 void jettisonExpensiveObjectsOnTopLevelNavigation();
 WEBCORE_EXPORT void registerMemoryReleaseNotifyCallbacks();
-WEBCORE_EXPORT void logMemoryStatisticsAtTimeOfDeath();
+WEBCORE_EXPORT void logMemoryStatistics(LogMemoryStatisticsReason);
 
 } // namespace WebCore
